--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "khalil",
   "license": "ISC",
   "devDependencies": {
+    "@types/css-minimizer-webpack-plugin": "^3.0.2",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
+    "html-minimizer-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.2",
     "resolve-url-loader": "^4.0.0",
