--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "prod": "webpack --config webpack.prod.js",
+    "dev": "webpack --config webpack.dev.js"
   },
   "author": "khalil",
   "license": "ISC",
